<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RushDroid</string>
    <string name="boutonJouer">Play</string>
    <string name="boutonNiveau1">Level 1</string>
    <string name="boutonNiveau2">Level 2</string>
    <string name="boutonNiveau3">Level 3</string>
    <string name="boutonNiveau4">Level 4</string>
    <string name="boutonNiveau5">Level 5</string>
    <string name="boutonNiveau6">Level 6</string>
    <string name="boutonNiveau7">Level 7</string>
    <string name="boutonNiveau8">Level 8</string>
    <string name="boutonNiveau9">Level 9</string>
    <string name="boutonNiveau10">Level 10</string>
    <string name="boutonNiveau11">Level 11</string>
    <string name="boutonNiveau12">Level 12</string>
    <string name="boutonNiveau13">Level 13</string>
    <string name="boutonNiveau14">Level 14</string>
    <string name="boutonNiveau15">Level 15</string>
    <string name="boutonNiveau16">Level 16</string>
    <string name="boutonNiveau17">Level 17</string>
    <string name="boutonNiveau18">Level 18</string>
    <string name="boutonNiveau19">Level 19</string>
    <string name="boutonNiveau20">Level 20</string>
    <string name="boutonNiveau21">Level 21</string>
    <string name="boutonNiveau22">Level 22</string>
    <string name="boutonNiveau23">Level 23</string>
    <string name="boutonNiveau24">Level 24</string>
    <string name="boutonNiveau25">Level 25</string>
    <string name="boutonNiveau26">Level 26</string>
    <string name="boutonNiveau27">Level 27</string>
    <string name="boutonNiveau28">Level 28</string>
    <string name="boutonNiveau29">Level 29</string>
    <string name="boutonNiveau30">Level 30</string>
    <string name="boutonNiveau31">Level 31</string>
    <string name="boutonNiveau32">Level 32</string>
    <string name="boutonNiveau33">Level 33</string>
    <string name="boutonNiveau34">Level 34</string>
    <string name="boutonNiveau35">Level 35</string>
    <string name="boutonNiveau36">Level 36</string>
    <string name="boutonNiveau37">Level 37</string>
    <string name="boutonNiveau38">Level 38</string>
    <string name="boutonNiveau39">Level 39</string>
    <string name="boutonNiveau40">Level 40</string>
    <string name="boutonNiveau41">Level 41</string>
    <string name="boutonNiveau42">Level 42</string>
    <string name="boutonNiveau43">Level 43</string>
    <string name="boutonNiveau44">Level 44</string>
    <string name="boutonNiveau45">Level 45</string>
    <string name="boutonNiveau46">Level 46</string>
    <string name="boutonNiveau47">Level 47</string>
    <string name="boutonNiveau48">Level 48</string>
    <string name="boutonNiveau49">Level 49</string>
    <string name="boutonNiveau50">Level 50</string>
    <string name="boutonNiveau51">Level 51</string>
    <string name="boutonNiveau52">Level 52</string>
    <string name="boutonNiveau53">Level 53</string>
    <string name="boutonNiveau54">Level 54</string>
    <string name="boutonNiveau55">Level 55</string>
    <string name="boutonNiveau56">Level 56</string>
    <string name="boutonNiveau57">Level 57</string>
    <string name="boutonNiveau58">Level 58</string>
    <string name="boutonNiveau59">Level 59</string>
    <string name="boutonNiveau60">Level 60</string>
    <string name="boutonNiveau61">Level 61</string>
    <string name="boutonNiveau62">Level 62</string>
    <string name="boutonNiveau63">Level 63</string>
    <string name="boutonNiveau64">Level 64</string>
    <string name="boutonOptions">Options</string>
    <string name="boutonQuitter">Exit</string>
    <string name="boutonScores">Scores</string>
    <string name="boutonSucces">Achievements</string>
    <string name="texteChoixDuNiveau">Level Selection</string>
    <string name="texteNiveau">Level :</string>
    <string name="texteNombreDeCoups">Strokes :</string>
    <string name="texteTempsEcoule">Time :</string>
    <string name="titreMenuPrincipal">RushDroid</string>
    <string name="titreOptions">Options</string>
    <string name="texteCopyright">Copyright 2016 \nBIZZOZZERO Nicolas\nAll rights reserved</string>
    <string name="texteVictoireTitre">Congratulations !</string>
    <string name="boutonStatistics">Statistics</string>
    <string name="texteScoreActuel">Current score</string>
    <string name="texteTemps">Time :</string>
    <string name="texteCoups">Strokes :</string>
    <string name="texteRecord">Record</string>
    <string name="texteRecordTemps">Time :</string>
    <string name="texteMonde">World</string>
    <string name="texteJeuNiveau">Level</string>
    <string name="imageAchievements" translatable="false">imageAchievements</string>
    <string name="imageScores" translatable="false">imageScores</string>
    <string name="imageAchievementsLand" translatable="false">imageAchievements</string>
    <string name="imageScoresLand" translatable="false">imageScores</string>
    <string name="texteTitreVictoire">Congratulations !</string>
    <string name="texteVictoireNiveauFini">You just finished level</string>
    <string name="texteVictoireTemps">Time :</string>
    <string name="texteVictoireCoups">Strokes :</string>
    <string name="texteBoutonVictoireSelectionDesNiveaux">Go back to level selection</string>
    <string name="texteBoutonVictoireMenuPrincipal">Go back to main menu</string>
    <string name="texteTitreStatistiques">Statistics</string>
    <string name="statistiquesNomMonde1">World 1</string>
    <string name="statistiquesnvxtermines">Number of levels finished</string>
    <string name="statistiquesprcentagenvxtermines">Progression</string>
    <string name="statistiquestotalrecordtemps">Total time-records</string>
    <string name="statistiquespirerecordtemps">Worst time score</string>
    <string name="statistiquesnvxpirerecordtemps">Level of the worst time-score</string>
    <string name="statistiquestotalrecordcoups">Total strokes-records</string>
    <string name="statistiquespirerecordcoups">Worst strokes score</string>
    <string name="statistiquesnvxpirerecordcoups">Level of the worst strokes-score</string>
    <string name="statistiquesNomMonde2">World 2</string>
    <string name="statistiquesNomMonde3">World 3</string>
    <string name="statistiquesNomMonde4">World 4</string>
    <string name="statistiquesJeu">Game</string>
    <string name="statistiquesnombredecoups">Number of total strokes</string>
    <string name="statistiquestempspasseajouer">Play time [d-h-m-s]</string>
    <string name="dialoguejeutexte">Do you really want to exit the game ? Your progression will be lost.</string>
    <string name="dialoguejeurecommencerniveau">Do you really want to restart the game ? Your progression will be lost.</string>
    <string name="dialogueoptionresettexte">Do you really want to reset your scores ? Your data will be lost.</string>
    <string name="oui">Yes</string>
    <string name="non">No</string>
    <string name="retour">Go back</string>
    <string name="autresstatistiques">Other statistics</string>
    <string name="musique">Music</string>
    <string name="activer">Activate :</string>
    <string name="effetssonores">Sound effects</string>
    <string name="theme">Theme</string>
    <string name="themelight">Light Theme</string>
    <string name="themedark">Dark Theme</string>
    <string name="donnees">Data</string>
    <string name="touteffacer">Reset all</string>
    <string name="remerciements">Thanks</string>
    <string name="iconeapplication">App Icon :</string>
    <string name="noms">Names</string>
    <string name="niveauxdesignes">Levels designed</string>
    <string name="fonctionindisponible">We\'re sorry, this feature is not available yet. We\'re working on it for the next update.</string>
    <string name="iconessucces">Achievements images</string>
    <string name="strokesdp">Strokes :</string>
    <string name="hourglassdp">Hourglass :</string>
    <string name="leveldesigners">Level Designers :</string>
    <string name="niveausuivant">Next level</string>
    <string name="vibrations">Vibrations</string>
    <string name="boutoncoupprecedent" translatable="false">boutonCoupPrecedent</string>
    <string name="boutonrestart" translatable="false">boutonRestart</string>
    <string name="translations">Translations</string>
    <string name="spanishdp">Spanish :</string>
    <string name="turkishdp">Turkish :</string>
    <string name="go_back_to_the_game">Go back to the game</string>
    <string name="musicdp">Music :</string>
    <string name="sound_effectsdp">Sound effects :</string>
    <string name="vibrationsdp">Vibrations :</string>
    <string name="statistiquesNomMonde5">World 5</string>
    <string name="statistiquesNomMonde6">World 6</string>
    <string name="statistiquesNomMonde7">World 7</string>
    <string name="statistiquesNomMonde8">World 8</string>
    <string name="signin_other_error" translatable="false">There was an issue with sign-in, please try again later.</string>
    <string name="signin_failure" translatable="false">Unable to sign in.</string>
    <string name="connectezvous" translatable="false">Connect to the Google Play Service to use this functionality.</string>
</resources>