<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/texteTitreVictoire"
            android:id="@+id/textView4"
            android:layout_gravity="center"

            android:fontFamily="Cambria Math"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texteVictoireNiveauFini"
                android:id="@+id/textView21"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"

                android:fontFamily="Cambria Math"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/texteVictoireNiveau"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"

                android:fontFamily="Cambria Math"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texteVictoireTemps"
                android:id="@+id/textView22"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"

                android:fontFamily="Cambria Math"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/texteVictoireTemps"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"

                android:fontFamily="Cambria Math"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texteVictoireCoups"
                android:id="@+id/textView24"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"

                android:fontFamily="Cambria Math"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/texteVictoireCoups"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"

                android:fontFamily="Cambria Math"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:id="@+id/layoutNiveauSuivant">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/niveausuivant"
                android:id="@+id/button11"
                android:width="250dp"
                android:onClick="onClickGoToNiveauSuivant"
                android:fontFamily="Cambria Math"
                android:focusable="false"
                android:enabled="true"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:layout_gravity="center_horizontal"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texteBoutonVictoireSelectionDesNiveaux"
                android:id="@+id/button5"

                android:width="250dp"

                android:onClick="onClickGoToSelectionDesNiveaux"
                android:fontFamily="Cambria Math"
                android:focusable="false"
                android:enabled="true"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:layout_gravity="center_horizontal"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texteBoutonVictoireMenuPrincipal"
                android:id="@+id/button6"

                android:width="250dp"

                android:onClick="onClickGoToMenuPrincipal"
                android:fontFamily="Cambria Math"
                android:focusable="false"
                android:enabled="true"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>